--- a/style.css
+++ b/style.css
@@ -1,3 +1,67 @@
-.goodColor {
-    color: green;   
+button {
+    cursor: pointer;
+}
+.header {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;    
+}
+
+.logo {
+    /* height: 120px; */
+    width: 200px;
+    cursor: pointer;
+}
+
+.nav-items {
+    display: flex;
+    align-items: center;
+}
+
+.nav-items > ul {
+    display: flex;
+    padding: 0 20px;
+}
+
+.nav-items > ul > li {
+    margin: 10px;
+    padding: 10px;
+    list-style: none;
+    font-size: 22px;
+    cursor: pointer;
+}
+
+.res-container {
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: space-between; */
+}
+
+.res-card {
+    width: 240px;
+    height: 360px;
+    margin: 5px;
+    background-color: antiquewhite;
+}
+
+.res-card:hover {
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+.food-desc {
+    padding: 5px;
+}
+
+/* .search {
+    padding: 10px;
+} */
+
+.food-img {
+    width: 100%;
+    height: 50%;
+}
+
+.filter-btn {
+    margin: 10px 10px 10px 0;   
 }
